--- a/src/php/dockerfile
+++ b/src/php/dockerfile
@@ -4,7 +4,22 @@ RUN pecl install igbinary \
 	&& pecl install redis \
 	&& docker-php-ext-install mysqli \
 	&& docker-php-ext-enable redis \
-	&& echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
+	&& apt-get update \
+	&& echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini \
+	&& apt-get install --no-install-recommends --no-install-suggests -q -y software-properties-common \
+    	&& apt-get update \
+    	&& add-apt-repository ppa:ondrej/php \
+    	&& apt-get update \
+    	&& apt-get install --no-install-recommends --no-install-suggests -q -y \
+    	nginx \
+    	php${PHPVER}-fpm \
+    	&& apt-get clean \
+    	&& apt-get autoremove \
+    	&& rm -rf /var/lib/apt/lists/*
+EXPOSE 80
+VOLUME /var/www/html
+WORKDIR /var/www/html
+ENTRYPOINT ["/bin/bash", "-c", "/usr/sbin/service php${PHPVER}-fpm start && nginx -g 'daemon off;'"]
 
 	
 
